- Updated the POM to WSO2 v5 - Fixed CheckStyle and FindBugs issues in Governance repo. - Updated the pom s to support v5